<resources>
    <string name="app_name">SKMess</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid Phone Number</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="error_invalid_email">This Phone Number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Add Customer</string>
    <string name="menu_gallery">Company List</string>
    <string name="menu_slideshow">Search Now</string>
    <string name="menu_tools">Order</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="submit">Submit</string>

    <string name="new_v">New version available</string>
    <string name="update_text">Please, "\n"
        update app to new version
        to continue reposting.</string>
    <string name="cancel">NO,THANKS</string>
    <string name="select_product">Select Product</string>
    <string name="update">Update</string>
    <string name="title_activity_board">Board</string>
    <string name="title_activity_delivery">Delivery</string>
    <string name="title_activity_dealer">Dealer</string>

    <string name="logintext1">LOGIN TO YOUR FIX MY RIDE PROFILE</string>
    <string name="logintext2">THE POINT OF USING LOREM IPSUM</string>
    <string name="logintext3">WELCOME YOUR</string>
    <string name="logintext4">CUSTOMER LOGIN</string>
    <string name="username">USER NAME</string>
    <string name="password">PASSWORD</string>
    <string name="rememberme">REMEMBER ME</string>
    <string name="custreg">CUSTOMER REGISTERATION</string>
    <string name="forgotpass">FORGOT PASSWORD</string>

    <string name="title_activity_register"></string>
    <string name="welcomereg">WELCOME YOUR</string>
    <string name="REGISTERATION">CUSTOMER REGISTRATION</string>
    <string name="fname">FIRST NAME</string>
    <string name="lname">LAST NAME</string>
    <string name="address">ADDRESS</string>
    <string name="phone">PHONE NO</string>
    <string name="email">E-MAIL ADDRESS</string>
    <string name="confirmpass">CONFIRM PASSWORD</string>
    <string name="agreement">I ACCEPT YOUR TERMS &amp; CONDITIONS</string>

    <string name="title_activity_forgot"></string>
    <string name="changeforgot">CHANGE FORGOT</string>
    <string name="FORGOT">YOUR PASSWORD</string>
    <string name="userid">USER ID</string>

    <string name="title_activity_home"></string>
    <string name="carwash">CAR WASH</string>
    <string name="carwashsmall">Keeping your car clean, Anywhere &amp; Anytime.</string>
    <string name="finance">FINANCE &amp; INSURANCE</string>
    <string name="financesmall">Book a Wash At your Preferred Time</string>
    <string name="carrepair">CAR REPAIR</string>
    <string name="carrepairsmall">We fix anything to do with your car.</string>

</resources>
